# GenkaiEraPy

./: .env.ci  .env.example  .env.test  .gitignore  Makefile  README.md  compose.yml  config.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: python.yml
docker/postgres/: Dockerfile
docker/postgres/initdb/: 01.sql
docker/python/: Dockerfile
migration/: env.py  script.py.mako
migration/versions/: fbab55528ed7_.py
script/: database.py  load_env.py  run_command.py
src/adapter/: session.py  type.py
src/adapter/repository/: member.py  repository.py  server.py  user.py
src/common/design/: interface.py  singleton.py
src/common/util/: utcnow.py
src/di/: container.py
src/di/module/: config.py  database.py  message.py
src/domain/base/: entity.py  field.py  value.py
src/domain/common/: value.py
src/domain/member/: entity.py  value.py
src/domain/message/: entity.py  value.py
src/domain/server/: entity.py  value.py
src/domain/user/: entity.py  field.py  value.py
src/infrastructure/database/sqlalchemy/: session.py  table_name.py
src/infrastructure/database/sqlalchemy/model/: define.py  name.py
src/infrastructure/database/sqlalchemy/model/base/: model.py
src/infrastructure/database/sqlalchemy/model/server/: model.py  trabslator.py
src/infrastructure/database/sqlalchemy/model/user/: model.py  trabslator.py
src/infrastructure/message/: client.py
src/message/discord/: client.py
src/message/discord/event/: on_message.py
src/message/discord/event/on_message/: listner.py
