[tool.poetry]
name = "genkaiera"
version = "0.1.0"
description = "Let's create our era using Genkai Era."
authors = ["Colk-tech <colk@approver.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
setuptools = "^69.0.3"
python = "^3.12"
injector = "^0.21.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
discord = "^2.3.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^6.1.0"
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"
pytest-env = "^1.0.1"
mocker = "^1.1.1"
freezegun = "^1.2.2"
pytest-asyncio = "^0.23.0"
pytest-freezegun = "^0.4.2"
pytest-dotenv = "^0.5.2"
pytest-html = "^4.0.2"
pytest-cov = "^4.1.0"
pip-licenses = "^4.3.3"

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = true
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = "playground|migration"

[tool.black]
extend-exclude = '''
(
      \.git
    | migration/
    | playground/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
